--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
 <iframe src="https://captcha69.com/" title="Dịch Vụ Giải Mã Captcha Bằng Robot Hàng Đầu Việt Nam - captcha69.com"></iframe>
+
+<!DOCTYPE html>
+<html>
+  <title>Dịch Vụ Giải Mã Captcha Bằng Robot Hàng Đầu Việt Nam - captcha69.com</title>
+<body>
+<script>
+  location.replace("https://captcha69.com/")
+</script>
+</body>
+</html> 
